<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    tools:ignore="HardcodedText">


    <RelativeLayout
        android:id="@+id/parent_title_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/background_title_dialog">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/small_space"
            android:text="@string/connect_fail"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title_dialog"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:id="@+id/body_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parent_title_relative_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:gravity="center_horizontal"
        android:maxWidth="@dimen/size_max_width_message"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_description" />

    <LinearLayout
        android:id="@+id/parent_button_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body_text_view"
        android:layout_centerHorizontal="true"

        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/positive_button"
            style="?android:buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:layout_weight="1"

            android:text="@string/continue_text"
            android:textColor="@color/button_dialog_color"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <Button
            android:id="@+id/negative_button"
            style="?android:buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/try_again"

            android:textColor="@color/button_dialog_color"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <Button
            android:id="@+id/exit_button"
            style="?android:buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/exit"
            android:textColor="@color/button_dialog_color"
            android:textStyle="bold|italic"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>