<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/main_parent_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    app:cardElevation="8dp"
    app:layout_anchorGravity="center_horizontal"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true"
    tools:ignore="HardcodedText,ContentDescription"
    android:transitionName="@string/image_movie_transition" >

    <RelativeLayout
        android:background="@color/background_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ProgressBar
            android:id="@+id/loading_image_progress_bar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/image_movie_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/background_app_transition"
            android:gravity="center"
            android:padding="@dimen/small_margin">

            <TextView
                android:id="@+id/name_movie_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dawn of the Planet of the Apes"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_description"
                android:textStyle="bold"
                android:transitionName="@string/name_movie_transition" />

            <TextView
                android:id="@+id/release_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:text="(2018)"
                android:textColor="@android:color/white"
                android:textStyle="italic"
                android:transitionName="@string/release_year_movie_transition" />
        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>

